--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,7 +1,6 @@
-
 // COLOR PALETTE
 $clr1: #FF521C;
-$clr2: #000;
+$clr2: rgb(237, 186, 186);
 $clr3: #fff;
 $clr4: darken($clr3, 40%);
 $clr5: #2d2d2d;
