--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -12,6 +12,8 @@
 
 // PAGES
 @import 'pages/home-page';
+@import 'pages/app';
 
 // COMPONENTS
 @import 'cmps/app-side-bar';
+@import 'cmps/work-space';
