--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -17,3 +17,6 @@
 // COMPONENTS
 @import 'cmps/app-side-bar';
 @import 'cmps/work-space';
+@import './cmps/board';
+@import './cmps/board-controller';
+@import './cmps/board-header';
