--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -2,8 +2,15 @@
     .board-header-content {
         padding: 30px 30px 0px 30px;
 
-        .board-headr-main {
+        .board-headr-top {
             width: 100%;
+        }
+
+        .board-header-bottom {
+            border-top: 1px solid;
+            border-color: #e6e9ef;
+            display: flex;
+            padding: 16px 0px;
         }
     }
 }
