--- a/src/assets/styles/cmps/_board.scss
+++ b/src/assets/styles/cmps/_board.scss
@@ -9,6 +9,6 @@
     visibility: visible;
 
     &.board-controller-pinned {
-        margin-left: 255px;
+        margin-left: 35px; //open:225px
     }
 }
