--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -21,4 +21,4 @@
 @import './cmps/board-controller';
 @import './cmps/board-header';
 @import './cmps/board-group';
-
+@import './cmps/task-preview';
