--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -5,8 +5,8 @@ $clr2: rgb(237, 186, 186);
 $clr3: #fff;
 $clr4: darken($clr3, 40%);
 $clr5: #2d2d2d;
-
 $clr6: #292f4c;
+// $clr7:
 
 // LAYOUT
 $layoutPadding: 20px;
