--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -8,12 +8,21 @@
 
         .column-wrapper-title {
             flex-basis: 425px;
+            position: sticky;
             // background-color: rgba(var(--pulse-floating-background-color), 0.95);
             z-index: 2;
-        }
 
-        .column-wrapper {}
+            .btn-group-menu {
+                position: absolute;
+                width: 30px;
+                left: -30px;
+                height: 100%;
+                display: flex;
+                background-color: #fff;
+                align-items: center;
+            }
+        }
     }
 
-   
+    .column-wrapper {}
 }
