--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -5,6 +5,8 @@
     .group-header-cmp {
         padding-left: 30px;
         position: relative;
+        align-items: center;
+
 
         .column-wrapper-title {
             width: 100%;
