--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -37,6 +37,7 @@
                 display: flex;
                 background-color: #fff;
                 align-items: center;
+                cursor: pointer;
             }
         }
 
@@ -47,5 +48,21 @@
             position: relative;
             height: 100%;
         }
+    }
+}
+
+
+.btns-modal {
+    border: 1px solid rgb(155, 154, 154);
+    position: absolute;
+    padding: 10px;
+    z-index: 100;
+    background-color: #fff;
+    margin-left: 144px;
+    button {
+        border: 1px solid rgb(186, 185, 185);
+        display: inline-block;
+        margin-bottom: 5px;
+        cursor: pointer;
     }
 }
