--- a/src/assets/styles/cmps/_board-controller.scss
+++ b/src/assets/styles/cmps/_board-controller.scss
@@ -1,6 +1,6 @@
     .board-controller {
-        &.board-controller-pinned {
-            width: 30px; //open 225px
+        &.board-controller {
+            width: 30px; //open : 225px close : 30px
             animation-name: slideInFromLeft;
             animation-duration: .1s;
             animation-timing-function: cubic-bezier(0, 0, 0.35, 1);
@@ -15,6 +15,60 @@
             z-index: 1000001;
             transition: width .1s cubic-bezier(0, 0, 0.35, 1);
             color: #323338;
+            background-color: white;
+
             // background-color: var(--dark-background-color);
+            & :hover {
+                width: 225px;
+            }
         }
+
+        .controller-btn {
+            // position: absolute;
+            height: 23px;
+            border-radius: 15px;
+            // background-color: inherit;
+            border: 1px solid rgb(171, 171, 171);
+            margin-left: 18px; //open:18px || close:216px
+            margin-top: 20px;
+            background-color: white;
+            text-align: center;
+        }
+
+        .pinned {
+            margin-left: 216px;
+        }
+
+        .controller-container {
+            position: absolute;
+            left: 85px;
+            top: 90px;
+            display: none;
+
+            & ul {
+                list-style-type: none;
+            }
+        }
+
     }
+
+    //     animation-name: slideInFromLeft;
+    //     animation-duration: .1s;
+    //     animation-timing-function: cubic-bezier(0, 0, 0.35, 1);
+    //     animation-delay: 0s;
+    //     animation-iteration-count: 1;
+    //     animation-direction: normal;
+    //     display: flex;
+    //     height: 100%;
+    //     position: absolute;
+    //     border-right: 1px solid;
+    //     border-color: #e6e9ef;
+    //     border-color: var(--layout-border-color);
+    //     z-index: 1000001;
+    //     width: 30px;
+    //     transition: width .1s cubic-bezier(0, 0, 0.35, 1);
+    //     color: #323338;
+    //     color: var(--primary-text-color);
+    //     background-color: #f5f6f8;
+    //     background-color: var(--dark-background-color);
+    // }
