--- a/src/assets/styles/cmps/task-preview.scss
+++ b/src/assets/styles/cmps/task-preview.scss
@@ -29,6 +29,7 @@
         .edit-btn {
             display: block;
             display: inline-block;
+            background-color: rgb(255, 255, 255);
         }
 
         .btn-side-task {
