--- a/src/assets/styles/cmps/_pulse.scss
+++ b/src/assets/styles/cmps/_pulse.scss
@@ -14,13 +14,13 @@
         position: relative;
 
         .title-container {
-            flex-basis: 263px;
+            flex-basis: 237px; //263px;
             flex-shrink: 0;
             position: sticky;
             left: 46px;
             z-index: 2000;
             display: flex;
-            flex: 1 1 auto;
+            // flex: 1 1 auto;
             // position: relative;
 
             .btn-pulse-menu {
