--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -12,17 +12,75 @@
             width: 100%;
 
             .board-header-top-top {
-                .top-container {}
+                .top-container {
+
+                    .left-container {
+                        .board-name {
+                            white-space: nowrap;
+                            font-weight: 500;
+                            cursor: text;
+                            display: inline-flex;
+                            max-width: 100%;
+                            align-items: center;
+                            overflow: hidden;
+
+                            .board-title {
+                                margin-right: 4px;
+                                font-size: 2rem;
+                                font-family: roboto-bold;
+                                box-sizing: border-box;
+
+                                .board-title-name {
+                                    border-radius: 4px;
+                                    font-size: 1.5rem;
+                                    line-height: 32px;
+                                    overflow: hidden;
+                                    white-space: normal;
+                                    line-height: 52px;
+                                    font-family: Robo;
+                                    font-weight: 400;
+                                    margin: 0;
+                                }
+
+                                .btn-hide {
+                                    color: #676879;
+                                    height: 32px;
+                                    width: 32px;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    margin-right: 4px;
+                                    border-radius: 4px;
+                                }
+
+                                .btn-star {
+                                    color: #676879;
+                                    height: 32px;
+                                    width: 32px;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    border-radius: 4px;
+                                }
+                            }
+                        }
+                    }
+                }
             }
 
         }
-
 
         .board-header-bottom {
             border-top: 1px solid;
             border-color: #e6e9ef;
             display: flex;
             padding: 16px 0px;
+        }
+
+        .board-header-filter {
+            padding: 16px 0;
+            font-size: .875rem;
+            box-sizing: border-box;
         }
     }
 }
