--- a/src/assets/styles/cmps/_pulse.scss
+++ b/src/assets/styles/cmps/_pulse.scss
@@ -1,7 +1,10 @@
 .pulse-component-wrapper {
     width: 100%;
     z-index: 0;
-    background-color: #fff;
+    background-color: rgb(237, 237, 237);
+    &:hover{
+        background-color: rgb(223, 223, 223);
+    }
 
     .pulse-component {
         height: 36px;
