--- a/src/assets/styles/cmps/_app-side-bar.scss
+++ b/src/assets/styles/cmps/_app-side-bar.scss
@@ -87,7 +87,7 @@
                 }
             }
 
-            .bottom {}
+            // .bottom {}
         }
 
         .avatar-menu-component-wrapper {
