--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -91,6 +91,9 @@
     z-index: 100;
     background-color: #fff;
     margin-left: 144px;
+    width: 264px;
+    top: 80%;
+    left: 7px;
 
     button {
         border: 1px solid rgb(186, 185, 185);
