--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -46,7 +46,7 @@
         font-size: 14px;
         line-height: 24px;
         font-family: sans-serif;
-        
+
         &:hover {
             background-color: rgb(3, 76, 145);
         }
@@ -59,6 +59,9 @@
         color: #323338;
         box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
         padding: 16px;
+        position: absolute;
+        top: 190px;
+        left: 165px;
 
         .first-txt-modal {
             flex: 1 1 auto;
