--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -22,8 +22,7 @@
             color: #fff;
             padding: 4px 8px;
             align-items: center;
-
-
+            display: flex;
 
             &:hover {
                 background-color: rgb(3, 76, 145);
@@ -31,6 +30,9 @@
 
             .new-item-modal-btn {
                 cursor: pointer;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
     }
