--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: Roberto;
-    src: url(../../fonts/Roboto-Light.ttf);
+    font-family: Roboto;
+    src: url(../../fonts/Roboto-Medium.ttf);
 }
