--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -24,7 +24,7 @@
             align-items: center;
             display: flex;
             font-size: 14px;
-            font-family: Roboto; // rubik
+            // font-family: Roboto; // rubik
             font-weight: 400;
 
             &:hover {
@@ -158,7 +158,7 @@
             box-sizing: border-box;
             background-color: #FFFFFF;
             font-size: 14px;
-            font-family: Roboto; //rubik
+
             font-weight: 400;
             border-radius: 4px;
             height: 32px;
@@ -188,7 +188,7 @@
             align-items: center;
             justify-content: center;
             font-size: 14px;
-            font-family: Roboto; // rubik
+            // font-family: Roboto; // rubik
 
             &:hover {
                 background-color: #ece7e7;
