--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -34,7 +34,7 @@
                                     overflow: hidden;
                                     white-space: normal;
                                     line-height: 52px;
-                                    font-family: Roboto;
+                                    // font-family: Roboto;
                                     font-weight: 500;
                                     font-size: 24px;
                                     margin: 0;
@@ -68,7 +68,7 @@
 
             .btn-defult-view {
                 font-size: 14px;
-                font-family: Roboto; // rubik
+
                 font-weight: 400;
             }
 
@@ -94,7 +94,7 @@
     outline-style: none;
     max-width: 70%;
     font-size: 14px;
-    font-family: Roboto; //  rubik
+
     font-weight: 400;
 
     &:hover {
