--- a/src/assets/styles/cmps/_app-side-bar.scss
+++ b/src/assets/styles/cmps/_app-side-bar.scss
@@ -83,6 +83,10 @@
                         position: relative;
                         cursor: pointer;
                         outline: none;
+
+                        &:hover {
+                            background-color: rgba(0, 0, 0, 0.427);
+                        }
                     }
                 }
             }
