--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -169,7 +169,8 @@
         }
     }
 
-    .persons-wrapper {
+
+    .filter-wrapper {
         width: 90px;
         justify-content: center;
         align-items: center;
@@ -178,7 +179,8 @@
         color: #323338;
         margin-right: 6px;
 
-        .person-btn {
+
+        .filter-btn {
             cursor: pointer;
             display: flex;
             width: 100%;
