--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -1,211 +1,211 @@
-.group-header-wrppaer {
-    position: relative; //absoulote
-    height: 36px;
-<<<<<<< HEAD
-    transition: padding .15s;
-=======
+// .group-header-wrppaer {
+//     position: relative; //absoulote
+//     height: 36px;
+// <<<<<<< HEAD
+//     transition: padding .15s;
+// =======
 
-    // .group-header-cmp {
-    //     padding-left: 30px;
-    //     position: relative;
-    //     align-items: center;
+//     // .group-header-cmp {
+//     //     padding-left: 30px;
+//     //     position: relative;
+//     //     align-items: center;
 
-    // .column-wrapper-title {
-    //     width: 100%;
-    //     position: sticky;
-
-
-
-    .title-inner-container {
-        flex: 1 1;
-        outline: none;
-        transition: padding .15s;
-        padding: 0;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        position: -webkit-sticky;
-        position: sticky;
-        left: 0;
-        z-index: 2;
-        min-width: 180px;
-        background-color: rgba(253, 253, 250, .95);
-        cursor: default;
-        align-items: center;
-    }
+//     // .column-wrapper-title {
+//     //     width: 100%;
+//     //     position: sticky;
 
 
->>>>>>> 60ef823d77c0f0976afb8841b5c814df5f593b59
 
-    .group-title-wraper {
-        flex: 1 1;
-        outline: none;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        // position: -webkit-sticky;
-        position: sticky;
-        left: 0;
-        z-index: 2;
-        min-width: 180px;
-        background-color: rgba(253, 253, 250, .95);
-
-        .btn-group-menu-wrapper {
-            display: flex;
-            flex: 0 0 30px;
-            max-width: 30px;
-            padding-bottom: 1px;
-            left: -30px;
-            cursor: pointer;
-            align-items: center;
-            justify-content: center;
-            margin-right: 10px;
-
-            .btn-group-menu {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 12px;
-                height: 45%;
-                width: 50%;
-                /* padding: 24px; */
-                margin: 0px;
-                background-color: rgb(87, 155, 252);
-                border-radius: 50%;
-                color: white;
-            }
-        }
-
-        .group-header-cmp {
-
-            .drag-btn svg {
-                height: 24px;
-                display: none;
-                color: grey;
-                // padding: 1px;
-            }
-
-            .title-inner-container {
-                flex: 1 1;
-                outline: none;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                position: -webkit-sticky;
-                position: sticky;
-                left: 0;
-                z-index: 2;
-                min-width: 180px;
-                background-color: rgba(253, 253, 250, .95);
-                cursor: default;
-                align-items: center;
-
-                .group-title {
-
-                    padding: 0 5px;
-                    transition: padding .15s;
-                    outline: none;
-
-                    &:hover {
-                        outline: dashed 1px rgb(106, 106, 106);
-                    }
-                }
-            }
-
-        }
-
-        &:hover {
-            .drag-btn svg {
-                cursor: move;
-                display: block;
-                margin-top: 5px;
-            }
-        }
-    }
-
-<<<<<<< HEAD
-    &:hover {
-        .group-header-cmp {
-=======
-    .group-title {
-        color: rgb(0, 134, 192);
-        align-items: center;
-        font-size: 18px;
-        justify-content: center;
-        outline: none;
-        transition: padding .15s;
-
-        // transition:;
-        &:hover {
->>>>>>> 60ef823d77c0f0976afb8841b5c814df5f593b59
-            padding: 0 5px;
-            transition: padding .15s;
-        }
-
-<<<<<<< HEAD
-        .drag-btn svg {
-            cursor: move;
-            display: block;
-            margin-top: 5px;
-=======
-    .column-wrapper-row-columns {
-        display: flex;
-        width: 100%;
-        position: relative;
-        height: 100%;
-
-        .group-column-list {
-            font-size: 14px;
-
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            min-width: 140px;
-            font-weight: 400;
-
-            .group-column {
-                outline: none;
-
-                &:hover {
-                    outline: dashed 1px rgb(123, 123, 123);
-                }
-            }
-
-            &:hover {
-                background-color: #e6e9ef;
-            }
->>>>>>> 60ef823d77c0f0976afb8841b5c814df5f593b59
-        }
-    }
-}
+//     .title-inner-container {
+//         flex: 1 1;
+//         outline: none;
+//         transition: padding .15s;
+//         padding: 0;
+//         text-overflow: ellipsis;
+//         white-space: nowrap;
+//         position: -webkit-sticky;
+//         position: sticky;
+//         left: 0;
+//         z-index: 2;
+//         min-width: 180px;
+//         background-color: rgba(253, 253, 250, .95);
+//         cursor: default;
+//         align-items: center;
+//     }
 
 
-.btns-modal {
-    border: 1px solid rgb(155, 154, 154);
-    position: absolute;
-    padding: 10px;
-    z-index: 100;
-    background-color: #fff;
-    margin-left: 144px;
-    width: 264px;
-    top: 80%;
-    left: 7px;
+// >>>>>>> 60ef823d77c0f0976afb8841b5c814df5f593b59
 
-    button {
-        border: 1px solid rgb(186, 185, 185);
-        display: inline-block;
-        margin-bottom: 5px;
-        cursor: pointer;
-    }
-}
+//     .group-title-wraper {
+//         flex: 1 1;
+//         outline: none;
+//         text-overflow: ellipsis;
+//         white-space: nowrap;
+//         // position: -webkit-sticky;
+//         position: sticky;
+//         left: 0;
+//         z-index: 2;
+//         min-width: 180px;
+//         background-color: rgba(253, 253, 250, .95);
 
-.pulse-component-wrapper.group-footer {
-    background-color: #fff;
+//         .btn-group-menu-wrapper {
+//             display: flex;
+//             flex: 0 0 30px;
+//             max-width: 30px;
+//             padding-bottom: 1px;
+//             left: -30px;
+//             cursor: pointer;
+//             align-items: center;
+//             justify-content: center;
+//             margin-right: 10px;
 
-    .group-footer.pulse-component {
-        background-color: #fff;
-        padding-left: 0;
-        border-left: 8px solid rgb(87, 155, 252);
-        margin-left: 30px;
-        padding-left: 8px;
-    }
-}
+//             .btn-group-menu {
+//                 display: flex;
+//                 align-items: center;
+//                 justify-content: center;
+//                 font-size: 12px;
+//                 height: 45%;
+//                 width: 50%;
+//                 /* padding: 24px; */
+//                 margin: 0px;
+//                 background-color: rgb(87, 155, 252);
+//                 border-radius: 50%;
+//                 color: white;
+//             }
+//         }
+
+//         .group-header-cmp {
+
+//             .drag-btn svg {
+//                 height: 24px;
+//                 display: none;
+//                 color: grey;
+//                 // padding: 1px;
+//             }
+
+//             .title-inner-container {
+//                 flex: 1 1;
+//                 outline: none;
+//                 text-overflow: ellipsis;
+//                 white-space: nowrap;
+//                 position: -webkit-sticky;
+//                 position: sticky;
+//                 left: 0;
+//                 z-index: 2;
+//                 min-width: 180px;
+//                 background-color: rgba(253, 253, 250, .95);
+//                 cursor: default;
+//                 align-items: center;
+
+//                 .group-title {
+
+//                     padding: 0 5px;
+//                     transition: padding .15s;
+//                     outline: none;
+
+//                     &:hover {
+//                         outline: dashed 1px rgb(106, 106, 106);
+//                     }
+//                 }
+//             }
+
+//         }
+
+//         &:hover {
+//             .drag-btn svg {
+//                 cursor: move;
+//                 display: block;
+//                 margin-top: 5px;
+//             }
+//         }
+//     }
+
+// <<<<<<< HEAD
+//     &:hover {
+//         .group-header-cmp {
+// =======
+//     .group-title {
+//         color: rgb(0, 134, 192);
+//         align-items: center;
+//         font-size: 18px;
+//         justify-content: center;
+//         outline: none;
+//         transition: padding .15s;
+
+//         // transition:;
+//         &:hover {
+// >>>>>>> 60ef823d77c0f0976afb8841b5c814df5f593b59
+//             padding: 0 5px;
+//             transition: padding .15s;
+//         }
+
+// <<<<<<< HEAD
+//         .drag-btn svg {
+//             cursor: move;
+//             display: block;
+//             margin-top: 5px;
+// =======
+//     .column-wrapper-row-columns {
+//         display: flex;
+//         width: 100%;
+//         position: relative;
+//         height: 100%;
+
+//         .group-column-list {
+//             font-size: 14px;
+
+//             position: relative;
+//             display: flex;
+//             align-items: center;
+//             justify-content: center;
+//             height: 100%;
+//             min-width: 140px;
+//             font-weight: 400;
+
+//             .group-column {
+//                 outline: none;
+
+//                 &:hover {
+//                     outline: dashed 1px rgb(123, 123, 123);
+//                 }
+//             }
+
+//             &:hover {
+//                 background-color: #e6e9ef;
+//             }
+// >>>>>>> 60ef823d77c0f0976afb8841b5c814df5f593b59
+//         }
+//     }
+// }
+
+
+// .btns-modal {
+//     border: 1px solid rgb(155, 154, 154);
+//     position: absolute;
+//     padding: 10px;
+//     z-index: 100;
+//     background-color: #fff;
+//     margin-left: 144px;
+//     width: 264px;
+//     top: 80%;
+//     left: 7px;
+
+//     button {
+//         border: 1px solid rgb(186, 185, 185);
+//         display: inline-block;
+//         margin-bottom: 5px;
+//         cursor: pointer;
+//     }
+// }
+
+// .pulse-component-wrapper.group-footer {
+//     background-color: #fff;
+
+//     .group-footer.pulse-component {
+//         background-color: #fff;
+//         padding-left: 0;
+//         border-left: 8px solid rgb(87, 155, 252);
+//         margin-left: 30px;
+//         padding-left: 8px;
+//     }
+// }
