--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -1,109 +1,84 @@
 .group-header-wrapper.pulse-component-wrapper {
-    // position: relative; //absoulote
-    // height: 36px;
-    // transition: padding .15s;
 
-    .title-container.group-title-wrapper {
-        flex: 1 1;
-        outline: none;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        // position: -webkit-sticky;
-        position: sticky;
-        left: 0;
-        z-index: 2;
-        min-width: 180px;
-        background-color: rgba(253, 253, 250, .95);
+    .btn-pulse-menu-wrapper.btn-group-menu-wrapper {
+        display: flex;
+        cursor: pointer;
+        align-items: center;
+        justify-content: center;
+        margin-right: 10px;
 
-        .btn-pulse-menu-wrapper.btn-group-menu-wrapper {
+        .btn-group-menu {
             display: flex;
-            flex: 0 0 30px;
-            max-width: 30px;
-            padding-bottom: 1px;
-            left: -30px;
-            cursor: pointer;
             align-items: center;
             justify-content: center;
-            margin-right: 10px;
+            font-size: 12px;
+            height: 45%;
+            width: 50%;
+            background-color: rgb(87, 155, 252);
+            border-radius: 50%;
+            color: white;
+        }
+    }
 
+    .title-cell.group-header {
+        // position: relative;
+        // text-align: left;
+        // font-size: 18px;
+        // flex: 1 0 308px;
+        // min-width: 0px;
+        // display: flex;
+        // align-items: center;
+        // padding-bottom: 1px;
+        // z-index: 1;
 
-            .btn-group-menu {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 12px;
-                height: 45%;
-                width: 50%;
-                /* padding: 24px; */
-                margin: 0px;
-                background-color: rgb(87, 155, 252);
-                border-radius: 50%;
-                color: white;
+        .drag-btn svg {
+            height: 24px;
+            display: none;
+            color: grey;
+            margin-bottom: 5px;
+        }
+
+        .group-title-wrapper {
+            color: rgb(87, 155, 252);
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 18px;
+
+            .group-title {
+                padding: 0 5px;
+                transition: padding .15s;
+                outline: none;
+
+                &:hover {
+                    outline: dashed 1px rgb(106, 106, 106);
+                }
             }
         }
 
-        .title-cell-component.group-header {
-            .pulse-left-indicator.group-header {}
-
-            //             .drag-btn svg {
-            //                 height: 24px;
-            //                 display: none;
-            //                 color: grey;
-            //                 // padding: 1px;
-            //             }
-
-            //             .title-inner-container {
-            //                 flex: 1 1;
-            //                 outline: none;
-            //                 text-overflow: ellipsis;
-            //                 white-space: nowrap;
-            //                 position: -webkit-sticky;
-            //                 position: sticky;
-            //                 left: 0;
-            //                 z-index: 2;
-            //                 min-width: 180px;
-            //                 background-color: rgba(253, 253, 250, .95);
-            //                 cursor: default;
-            //                 align-items: center;
-
-            //                 .group-title {
-
-            //                     padding: 0 5px;
-            //                     transition: padding .15s;
-            //                     outline: none;
-
-            //                     &:hover {
-            //                         outline: dashed 1px rgb(106, 106, 106);
-            //                     }
-            //                 }
-            //             }
-
-            //         }
-
-            //         &:hover {
-            //             .drag-btn svg {
-            //                 cursor: move;
-            //                 display: block;
-            //                 margin-top: 5px;
-            //             }
-            //         }
-            //     }
-
-            &:hover {
-                .group-header-cmp {
-                    padding: 0 5px;
-                    transition: padding .15s;
-                }
-
-                .drag-btn svg {
-                    cursor: move;
-                    display: block;
-                    margin-top: 5px;
-                }
+        &:hover {
+            .drag-btn svg {
+                cursor: move;
+                display: block;
+                margin-top: 5px;
             }
         }
     }
+
+
+    &:hover {
+        .group-header-cmp {
+            padding: 0 5px;
+            transition: padding .15s;
+        }
+
+        .drag-btn svg {
+            cursor: move;
+            display: block;
+            margin-top: 5px;
+        }
+    }
 }
+
 
 // .btns-modal {
 //     border: 1px solid rgb(155, 154, 154);
