--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -179,11 +179,10 @@
         color: #323338;
         margin-right: 6px;
 
-
         .filter-btn {
             cursor: pointer;
             display: flex;
-            width: 100%;
+            width: 80%;
             border-radius: 4px;
             height: 32px;
             text-align: center;
@@ -191,6 +190,33 @@
             justify-content: center;
             font-size: 14px;
             // font-family: Roboto; // rubik
+
+            &:hover {
+                background-color: #ece7e7;
+            }
+        }
+    }
+
+    .filter-wrapper-small {
+
+        width: 40px;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        transition: width .4s;
+        color: #323338;
+        margin-right: 6px;
+
+        .small-btn {
+            cursor: pointer;
+            display: flex;
+            width: 30px;
+            border-radius: 4px;
+            height: 32px;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
 
             &:hover {
                 background-color: #ece7e7;
