--- a/src/assets/styles/cmps/_board-controller.scss
+++ b/src/assets/styles/cmps/_board-controller.scss
@@ -15,11 +15,11 @@
             z-index: 1000001;
             transition: width .1s cubic-bezier(0, 0, 0.35, 1);
             color: #323338;
-            background-color: white;
+            background-color: rgb(244, 244, 244);
 
             // background-color: var(--dark-background-color);
             & :hover {
-                width: 225px;
+                // width: 225px;
             }
         }
 
@@ -43,7 +43,20 @@
             position: absolute;
             left: 85px;
             top: 90px;
-            display: none;
+            background-color: #f5f6f8;
+            padding: 12px 16px;
+            font-weight: 400;
+            margin: 0;
+            font-family: roboto, sans-serif;
+            // display: none;
+
+            .controller-add-btn {
+                font-size: .875rem;
+                height: 32px;
+                grid-gap: 5px;
+                gap: 5px;
+                padding: 0 8px;
+            }
 
             & ul {
                 list-style-type: none;
