--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -1,4 +1,5 @@
 .group-header-wrapper.pulse-component-wrapper {
+    background-color: white;
 
     .btn-pulse-menu-wrapper.btn-group-menu-wrapper {
         display: flex;
@@ -99,14 +100,14 @@
 //     }
 // }
 
-// .pulse-component-wrapper.group-footer {
-//     background-color: #fff;
+.pulse-component-wrapper.group-footer {
+    background-color: #fff;
 
-//     .group-footer.pulse-component {
-//         background-color: #fff;
-//         padding-left: 0;
-//         border-left: 8px solid rgb(87, 155, 252);
-//         margin-left: 30px;
-//         padding-left: 8px;
-//     }
-// }
+    .group-footer.pulse-component {
+        background-color: #fff;
+        padding-left: 0;
+        border-left: 8px solid rgba(87, 156, 252, 0.69);
+        margin-left: 30px;
+        padding-left: 8px;
+    }
+}
