--- a/src/assets/styles/cmps/_pulse.scss
+++ b/src/assets/styles/cmps/_pulse.scss
@@ -32,6 +32,7 @@
         max-width: 426px;
         flex-basis: 426px;
         flex-shrink: 0;
+        // margin-right: 786px;
 
         .cells-row-component {
             width: 100%;
