--- a/src/assets/styles/cmps/_board-controller.scss
+++ b/src/assets/styles/cmps/_board-controller.scss
@@ -12,7 +12,7 @@
             position: absolute;
             border-right: 1px solid;
             border-color: #d0d4e4;
-            z-index: 1000001;
+            z-index: 20;
             transition: width .1s cubic-bezier(0, 0, 0.35, 1);
             color: #323338;
             background-color: rgb(244, 244, 244);
